Refactor: TimeService와 ReservationService의 collect(Collectors.toList())를 toList()로 변경